--- a/style.css
+++ b/style.css
@@ -1,218 +1,138 @@
-body 
-{
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
-img {
-    width: 50px;
-    height: auto;
-
+:root {
+  --bgcolor: rgb(175, 172, 172);
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #1f2937;
-    padding-bottom: 100px;
-    align-self: stretch;
-    align-items: center;
-    padding: 10px 150px;
+html {
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
+body {
+  height: 1000px;
+  background-color: lightgray;
 }
 
-.header-right {
-display: flex;
-justify-content: flex-end;
-gap: 10px;
+/*Header Region*/
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: lightgray;
 }
 
-.header-left {
-    display: flex;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-    margin-right: auto;
+header img {
+  height: 30px;
+  background-color: var(--bgcolor);
+  border-radius: 50%;
+  padding: 5px;
+  transition: all 0.2s;
 }
 
-.placeholder {
-    display: flex;
-    background-color: #1f2937;
-    padding: 100px 150px;
-    align-self: stretch;
-    flex: 1;
-    justify-content: space-between;
-    gap: 50px;
+header img:hover {
+  opacity: 0.5;
 }
 
-.placeholder-left {
-
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: auto;
-    height: 200px;
-    width: 400px;
+.left-icon {
+  width: 200px;
+  margin-right: 30px;
+  display: flex;
+  gap: 15px;
 }
-.placeholder button {
-
-    background-color: #3882F6;
-    color: white;
-    padding: 5px 20px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 5px;    
+.right-icon {
+  padding-right: 10px;
+  width: 200px;
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+  margin-left: 30px;
 }
 
-.placeholder img {
-    height: 200px;
-    width: 400px;
+.searchbar {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  max-width: 600px;
+}
+.search-button {
+  transition: all 0.5s;
+  background-color: var(--bgcolor);
+  border: solid 1px grey;
+  border-left: none;
+  height: 33.6px;
+  border-radius: 0 3px 3px 0;
+  margin-left: -1px;
 }
 
-.infomation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0px 150px;
-    padding-top: 5px;
-    padding-bottom: 100px;
-    color:#1F2937;
-    flex: 1;
-    align-self: stretch;
+.search-button img {
+  height: 30px;
+  padding-top: 0px;
+  background-color: unset;
 }
 
-.info-container {
-    display: flex;
-    text-align: center;
-    gap: 75px;
-
+.search-button:hover {
+  opacity: 0.5;
 }
 
-.info-img {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 150px;
+.searchbar input {
+  height: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  flex: 1;
+  padding-left: 5px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border: solid 1px grey;
+  border-right: none;
+  background-color: rgb(175, 172, 172);
+}
+/*Hero Content*/
+.hero {
+  height: 350px;
+  background-color: black;
+  color: aliceblue;
+}
+.hero-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.hero-profile {
+  height: 250px;
+  width: 250px;
+  border: solid 1px white;
+}
+/*Main Content*/
+.main {
+  display: flex;
+  justify-content: space-between;
 }
 
-.infomation h2 {
-    font-weight: 900;
-    font-size: 36px;
-    padding-bottom: 30px;
-
+.picturebox {
+  height: 200px;
+  width: 200px;
+  border: solid 1px;
+  border-radius: 50%;
 }
 
-.info-img p {
-    padding: 0;
-    margin: 0;
-
+/*Footer*/
+.github-logo {
+  display: block;
+  max-width: 28px;
+  max-height: 28px;
+  transition: transform 0.3s ease-in-out;
 }
 
-.info-img div {
-    margin: 5px;
-    height: 150px;
-    width: 150px;
-    border-color: #3882F6;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 10px;
-    
+.github-logo:hover {
+  transform: rotate(360deg) scale(1.2);
 }
 
-
-#hero {
-
-    font-size: 48px;
-    font-weight: 900;
-    color: #f9faf8;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-
-#subtext {
-    font-size: 18px;
-    color: #e5e7eb;
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.quote {
-    padding: 100px 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.quote .text {
-    font-size:36px;
-    background-color: #E5E7EB;
-    font-style: italic;
-    padding: 0;
-    margin: 0;
-    align-self: center;
-
-}
-
-.quote .author {
-    align-self: flex-end;
-    font-size: 20px;
-    font-weight: 800;
-}
-
-.signup {
-    display: flex;
-    padding: 100px 150px;
-    align-self: stretch;
-    color: #F9FAF8;
-    justify-content: center;
-    align-items: center;
-}
-
-.signup-box {
-    background-color: #3882F6;
-    padding: 50px 100px;
-    border-radius: 10px;
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.signup-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.signup-text strong {
-    font-size: 24px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
-.signup-text p {
-    padding-top: 0;
-    margin-top: 0;
-}
-
-.signup-button {
-    background-color: #3882F6;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: #E5E7EB;
-    color: #E5E7EB;
-    padding: 5px 20px;
-    align-self: flex-end;
-    
-}
 .footer {
-    padding: 30px 150px;
-    align-self: stretch;
-    justify-content: center;
-    display: flex;
-    background-color: #1F2937;
-}
-.footer p {
-    color: #E5E7EB;
-    padding: 0;
-    margin: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  padding: 10px;
+  font-size: 20px;
+  color: rgb(41, 39, 39);
 }
